<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">ECH-Workers</string>
        <string name="app_subtitle">安全、快速的 ECH 隧道</string>
        <string name="tab_nodes">节点</string>
        <string name="tab_edit">编辑节点</string>
        <string name="node_list_title">我的节点</string>
        <string name="edit_node_title">编辑节点</string>
        <string name="add_node">添加节点</string>
        <string name="back_nodes">返回节点</string>
        <string name="btn_edit">编辑</string>
        <string name="node_selected">当前</string>
        <string name="node_select">选择</string>
        <string name="node_running">运行中</string>
        <string name="node_stopped">已停止</string>
        <string name="node_not_configured">未填写服务器地址</string>
        <string name="save_and_back">保存并返回节点列表</string>
        <string name="connection_section">连接参数</string>
        <string name="routing_section">智能分流</string>
        <string name="socks_port">本地代理端口：</string>
        <string name="ipv4">IPv4</string>
        <string name="ipv6">IPv6</string>
        <string name="global">全局代理</string>
        <string name="apps">分应用代理</string>
        <string name="save">保存</string>
        <string name="control_enable">启动</string>
        <string name="control_disable">停止</string>
        <string name="wss_addr">服务器地址（域名:端口）：</string>
        <string name="ech_dns">ECH DOH 服务器：</string>
        <string name="ech_domain">ECH 公钥查询域名：</string>
        <string name="pref_ip">优选 IP 节点</string>
        <string name="pref_ip_hint">每行一个 IP，可附带端口和 # 注释</string>
        <string name="pref_ip_help">启动时并发测速，自动保留最快的 3 个节点</string>
        <string name="routing_mode_label">流量模式</string>
        <string name="auto_best">启动前智能测速</string>
        <string name="fake_ip">启用 Fake-IP DNS</string>
        <string name="token">身份令牌：</string>

        <!-- Profile Management -->
        <string name="profile_label">配置节点：</string>
        <string name="btn_add">添加</string>
        <string name="btn_rename">重命名</string>
        <string name="btn_delete">删除</string>
        <string name="default_profile_name">默认节点</string>
        <string name="dialog_title_add">添加节点</string>
        <string name="dialog_title_rename">重命名节点</string>
        <string name="dialog_title_delete">确认删除？</string>
        <string name="dialog_hint_name">节点名称</string>
        <string name="toast_profile_exists">节点名称已存在</string>
        <string name="toast_name_empty">节点名称不能为空</string>
        <string name="toast_saved">保存成功</string>
        <string name="toast_cannot_delete_last">不能删除最后一个节点</string>
        <string name="ok">确定</string>
        <string name="cancel">取消</string>
        <string-array name="routing_modes">
                <item>智能分流（中国大陆直连）</item>
                <item>全局代理</item>
                <item>直连模式</item>
        </string-array>
</resources>
